--- a/Assets/Styles/Common_style.css
+++ b/Assets/Styles/Common_style.css
@@ -4,6 +4,7 @@
     --text-color-disabled: #3e3e3e;
     --fill: #D7D3BF;
     --accent: #C1BAA1;
+    --accent-muted: #aca58f;
     --outlines: #A59D84;
 }
 
@@ -13,6 +14,7 @@
     --text-color-disabled: #c4c4c4;
     --fill: #522546;
     --accent: #88304E;
+    --accent-muted: #742942;
     --outlines: #F7374F;
 }
 
@@ -30,7 +32,7 @@ html{
 }
 
 body {
-
+    background-color: var(--bg-primary) !important;
     transition: background-color 0.6s, color 0.6s;
 }
 
@@ -143,13 +145,143 @@ input:checked + .slider:before {
 }
 
 .PaginasCrsl {
-    width: 500%;
+    width: 500vw;
     transition: all 1s ease-in-out;
 }
 
 .pagina {
+    width: 100vw;
     height: 100vh;
+}
 
+.cajasExp {
+    background-color: var(--accent);
+    height: 26em;
+}
+
+.formulario{
+    color: var(--text-color);
+}
+
+.form-control {
+    background-color: var(--accent) !important;
+    outline: var(--outlines) !important;
+}
+
+.Campos {
+    position: relative;
+    padding-bottom: 20px;
+}
+
+.Campos input, textarea {
+    color: var(--text-color) !important;
+}
+
+.Campos input:hover, textarea:hover {
+    background-color: var(--accent-muted) !important;
+}
+
+.Campos input:focus, textarea:focus {
+	outline: 0.2em solid var(--text-color-disabled) !important;
+    border: none !important;
+}
+
+.Campos.success input {
+	outline: 0.2em solid #2ecc71 !important;
+}
+
+.Campos.error input {
+	outline: 0.2em solid #e74c3c !important;
+}
+
+.Campos small {
+	color: #e74c3c;
+	position: absolute;
+	bottom: 8;
+	left: 0;
+	visibility: hidden;
+}
+
+.Campos.error small {
+	visibility: visible;
+}
+
+#Nombre {
+    width: 30em;
+    height: 2em;
+}
+
+#Email {
+    width: 30em;
+    height: 2em;  
+}
+
+#Mensaje {
+    width: 40em;
+    height: 6em;
+}
+
+#sendBtn{
+    background-color: var(--accent) !important;
+    outline: var(--outlines) !important;
+    border: none;
+    width: 25em;
+    height: 2em;
+}
+
+#textoContacto {
+    background-color: var(--accent);
+    font-size: 1.2em;
+}
+
+.cajaLinks {
+    transition: 0.4s ease;
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+
+.cajaLinks:hover {
+    transform: scale(1.05);
+}
+
+.logoRS {
+    width: 1.6em;
+    height: 1.6em;
+    padding: 0.2em;
+}
+
+#GitHub {
+    background-color: #4078c0;
+}
+
+#LinkedIn {
+    background-color: #0A66C2;
+}
+
+#Discord {
+    background-color: #5865F2;
+}
+
+#Bluesky {
+    background-color: #1185FE;
+}
+
+#YouTube {
+    background-color: #FF0000;
+}
+
+#G-mail {
+    background-color: #EA4335;
+}
+
+#textoLinks {
+    background-color: var(--accent);
+    font-size: 1.2em;
+}
+
+footer {
+    background-color: var(--fill);
 }
 
 
@@ -172,10 +304,6 @@ input:checked + .slider:before {
         width: 100%;
         visibility: visible;
     }
-}
-
-.footer {
-    background-color: var(--fill);
 }
 
 @font-face {
